--- a/mods/mtr-nte.pw.toml
+++ b/mods/mtr-nte.pw.toml
@@ -1,13 +1,8 @@
 name = "Nemo's Transit Expansion"
-filename = "MTR-NTE-0.5.1+1.19.2.jar"
+filename = "MTR-NTE-0.4.2+joban+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/8pXSjgW8/versions/EVNzXnkT/MTR-NTE-0.5.1%2B1.19.2.jar"
+url = "https://github.com/DistrictOfJoban/mtr-nte-json/releases/download/0.4.2%2Bfork.3/MTR-NTE-0.4.2+joban+1.19.2.jar"
 hash-format = "sha1"
-hash = "fb4e1c76d3f7b519d740a9dddf7fe7c9874429e4"
-
-[update]
-[update.modrinth]
-mod-id = "8pXSjgW8"
-version = "EVNzXnkT"
+hash = "077C00ABEAB07FB51937F20D3310EEC7AE945046"
