--- a/mods/minecraft-transit-railway.pw.toml
+++ b/mods/minecraft-transit-railway.pw.toml
@@ -1,13 +1,14 @@
-name = "Minecraft Transit Railway"
-filename = "MTR-fabric-4.0.0-beta-8+1.19.2.jar"
+name = "Minecraft Transit Railway (Automated trains, planes, and more!)"
+filename = "MTR-fabric-1.19.2-3.2.2-hotfix-1.jar"
 side = "both"
+pin = true
 
 [download]
-url = "https://cdn.modrinth.com/data/XKPAmI6u/versions/j1ImPqSZ/MTR-fabric-4.0.0-beta-8%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "b1857a5ca68e0db40a094efc206d773ac76ee197"
+hash = "eb9ef66565792eae34882a2f52d1a595aa5e7b89"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "XKPAmI6u"
-version = "j1ImPqSZ"
+[update.curseforge]
+file-id = 4505539
+project-id = 266707
