--- a/mods/station-decoration.pw.toml
+++ b/mods/station-decoration.pw.toml
@@ -1,13 +1,14 @@
 name = "Station Decoration"
-filename = "MSD-fabric-1.19.2-4.0.0-beta-8-1.3.7.jar"
+filename = "MTR-MSD-Addon-fabric-1.19.2-3.2.2-1.3.4-enhancement-1.jar"
 side = "both"
+pin = true
 
 [download]
-url = "https://cdn.modrinth.com/data/AM3NyLOZ/versions/A7Stpvtd/MSD-fabric-1.19.2-4.0.0-beta-8-1.3.7.jar"
+url = "https://cdn.modrinth.com/data/AM3NyLOZ/versions/MMs0xECf/MTR-MSD-Addon-fabric-1.19.2-3.2.2-1.3.4-enhancement-1.jar"
 hash-format = "sha1"
-hash = "37d0f14619dfa3fc5504dec5ffb7ba9ee6dbd4f9"
+hash = "0dec26bd85c59217fa1f28efe7314afab115dbc7"
 
 [update]
 [update.modrinth]
 mod-id = "AM3NyLOZ"
-version = "A7Stpvtd"
+version = "MMs0xECf"
